labs/old-2018-lab1/testsuite/bad/bad036.cc
int foo() {
	for (56; 1; i++) { }
	return x;
}
